--- a/index2.html
+++ b/index2.html
@@ -4,18 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Free Stock Photos | Tella</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="pexels/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="responsive.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="css/output.css">
 </head>
 <body>
-    <div class="wrapper">
+    <div class="">
         <header>
-            <nav class="navbar">
-                <a href="index.html" class="logo" title="Free Stock Photos">
+            <nav class="">
+                <a href="index.html" class="." title="Free Stock Photos">
                     <div><img src="logo.png" width="35px" height="35px"></div>
                     <div class="nav-tella">Tella</div>
                 </a>
