--- a/Pexels/index.html
+++ b/Pexels/index.html
@@ -16,7 +16,7 @@
         <header>
             <nav class="navbar">
                 <a href="index.html" class="logo" title="Free Stock Photos">
-                    <div><img src="logo.png" width="35px" height="35px"></div>
+                    <div><img src="Pexels/logo.png" width="35px" height="35px"></div>
                     <div class="nav-tella">Tella</div>
                 </a>
                 <div class="searchbar">
@@ -38,7 +38,7 @@
                             <a href="#">Join</a>
                             <div class="country">
                             <a href="#">Change Language</a>
-                                <div><img  src="usa.png" alt="usa" width="36px" height="26px"></div>
+                                <div><img  src="Pexels/usa.png" alt="usa" width="36px" height="26px"></div>
                             </div>
                             <a href="#">Image & Video APi</a>
                             <a href="#">Apps & Plugins</a>
@@ -81,7 +81,7 @@
                         <hr>
                         <ul>
                             <li><a href="#">Login</a></li>
-                            <li><a href="#">Change Language <img  src="usa.png" alt="usa" width="36px" height="26px"></a></li>
+                            <li><a href="#">Change Language <img  src="Pexels/usa.png" alt="usa" width="36px" height="26px"></a></li>
                             <li><a href="#">Free Videos</a></li>
                             <li><a href="#">Challenges</a></li>
                         </ul>
@@ -105,7 +105,7 @@
             </nav>    
             <div class="hero-img">        
                 <div class="hero-background">
-                    <img src="hero.jpeg" alt="sea">
+                    <img src="Pexels/hero.jpeg" alt="sea">
                 </div>
                 <section class="hero-content">
                     <h1 class="hero-title">The best free stock photos, 
@@ -147,7 +147,7 @@
             <hr>
             <ul>
                 <li><a href="#">Login</a></li>
-                <li><a href="#">Change Language <img  src="usa.png" alt="usa" width="36px" height="26px"></a></li>
+                <li><a href="#">Change Language <img  src="Pexels/usa.png" alt="usa" width="36px" height="26px"></a></li>
                 <li><a href="#">Free Videos</a></li>
                 <li><a href="#">Challenges</a></li>
             </ul>
@@ -187,65 +187,65 @@
         </div>
         <div class="photo-gallery">
             <div class="column">
-                <img src="1.jfif" alt="1">
-                <img src="2.jpg" alt="2">
-                <img src="3.jpg" alt="3">
-                <img src="4.jfif" alt="4">
-                <img src="6.jpg" alt="6">
-                <img src="19.jpg" alt="19">
-                <img src="14.jpg" alt="14">
+                <img src="Pexels/1.jfif" alt="1">
+                <img src="Pexels/2.jpg" alt="2">
+                <img src="Pexels/3.jpg" alt="3">
+                <img src="Pexels/4.jfif" alt="4">
+                <img src="Pexels/6.jpg" alt="6">
+                <img src="Pexels/19.jpg" alt="19">
+                <img src="Pexels/14.jpg" alt="14">
             </div>
             <div class="column">
-                <img src="7.jfif" alt="7">
-                <img src="8.jfif" alt="8">
-                <img src="10.jpg" alt="10">
-                <img src="11.jfif" alt="11">
-                <img src="12.jpg" alt="12">
-                <img src="22.jpg" alt="22">
-                <img src="5.jfif" alt="5">
+                <img src="Pexels/7.jfif" alt="7">
+                <img src="Pexels/8.jfif" alt="8">
+                <img src="Pexels/10.jpg" alt="10">
+                <img src="Pexels/11.jfif" alt="11">
+                <img src="Pexels/12.jpg" alt="12">
+                <img src="Pexels/22.jpg" alt="22">
+                <img src="Pexels/5.jfif" alt="5">
                 
             </div>
             <div class="column">
-                <img src="13.jpg" alt="13">
-                <img src="15.jpg" alt="15">
-                <img src="16.jpg" alt="16">
-                <img src="17.jpg" alt="17">
-                <img src="18.jfif" alt="18">
-                <img src="21.jpg" alt="21">
-                <img src="20.png" alt="20">
-                <img src="23.jpg" alt="23">
-                <img src="9.jpg" alt="9">
-                <img src="24.jpg" alt="24">
+                <img src="Pexels/13.jpg" alt="13">
+                <img src="Pexels/15.jpg" alt="15">
+                <img src="Pexels/16.jpg" alt="16">
+                <img src="Pexels/17.jpg" alt="17">
+                <img src="Pexels/18.jfif" alt="18">
+                <img src="Pexels/21.jpg" alt="21">
+                <img src="Pexels/20.png" alt="20">
+                <img src="Pexels/23.jpg" alt="23">
+                <img src="Pexels/9.jpg" alt="9">
+                <img src="Pexels/24.jpg" alt="24">
             </div>
         </div>
         <div class="photo-gallery2">
             <div class="column2">
-                <img src="1.jfif" alt="1">
-                <img src="2.jpg" alt="2">
-                <img src="3.jpg" alt="3">
-                <img src="4.jfif" alt="4">
-                <img src="6.jpg" alt="6">
-                <img src="19.jpg" alt="19">
-                <img src="14.jpg" alt="14">
-                <img src="13.jpg" alt="13">
-                <img src="15.jpg" alt="15">
-                <img src="16.jpg" alt="16">
-                <img src="17.jpg" alt="17">
+                <img src="Pexels/1.jfif" alt="1">
+                <img src="Pexels/2.jpg" alt="2">
+                <img src="Pexels/3.jpg" alt="3">
+                <img src="Pexels/4.jfif" alt="4">
+                <img src="Pexels/6.jpg" alt="6">
+                <img src="Pexels/19.jpg" alt="19">
+                <img src="Pexels/14.jpg" alt="14">
+                <img src="Pexels/13.jpg" alt="13">
+                <img src="Pexels/15.jpg" alt="15">
+                <img src="Pexels/16.jpg" alt="16">
+                <img src="Pexels/17.jpg" alt="17">
             </div>
             <div class="column2">
-                <img src="7.jfif" alt="7">
-                <img src="8.jfif" alt="8">
-                <img src="10.jpg" alt="10">
-                <img src="11.jfif" alt="11">
-                <img src="12.jpg" alt="12">
-                <img src="22.jpg" alt="22">
-                <img src="5.jfif" alt="5">
-                <img src="18.jfif" alt="18">
-                <img src="21.jpg" alt="21">
-                <img src="20.png" alt="20">
-                <img src="23.jpg" alt="23">
-                <img src="9.jpg" alt="9">
-                <img src="24.jpg" alt="24">
+                <img src="Pexels/7.jfif" alt="7">
+                <img src="Pexels/8.jfif" alt="8">
+                <img src="Pexels/10.jpg" alt="10">
+                <img src="Pexels/11.jfif" alt="11">
+                <img src="Pexels/12.jpg" alt="12">
+                <img src="Pexels/22.jpg" alt="22">
+                <img src="Pexels/5.jfif" alt="5">
+                <img src="Pexels/18.jfif" alt="18">
+                <img src="Pexels/21.jpg" alt="21">
+                <img src="Pexels/20.png" alt="20">
+                <img src="Pexels/23.jpg" alt="23">
+                <img src="Pexels/9.jpg" alt="9">
+                <img src="Pexels/24.jpg" alt="24">
             </div>
         </div>
     </main>
