--- a/index2.html
+++ b/index2.html
@@ -4,56 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Free Stock Photos | Tella</title>
-    <link rel="shortcut icon" href="pexels/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="Pexels/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/output.css">
 </head>
-<body>
-    <div class="">
-        <header>
-            <nav class="">
-                <a href="index.html" class="." title="Free Stock Photos">
-                    <div><img src="logo.png" width="35px" height="35px"></div>
-                    <div class="nav-tella">Tella</div>
+<body class="font-nunito w-screen">
+    <header class="flex flex-auto basis-full fixed p-4 top-1 z-30 w-screen">
+                <a href="index.html" class="w-2/3 flex space-x-3 align-middle" title="Free Stock Photos">
+                    <div><img src="Pexels/logo.png" width="35px" height="35px"></div>
+                    <div class="text-lg font-bold text-white">Tella</div>
                 </a>
-                <div class="searchbar">
-                    <input autocapitalize="none" autocomplete="off" id="search" name="s" placeholder="Search for free photos" required="required" type="search" value="">
-                    <button id="search-icon" title="Search for stock photos">
-                        <i class="fa fa-search"></i>
-                    </button>
-                </div>
-                <div class="right-option">
-                    <div class="top-list">
-                        <a href="#">Explore</a>
-                        <a href="#">Licence</a>
-                        <a href="#">Upload</a>
+                <div class="w-1/3 flex pr-3">
+                    <div class="flex text-white space-x-7 text-xl">
+                        <a href="#" class="hover:text-gray-400">Explore</a>
+                        <a href="#" class="hover:text-gray-400">Licence</a>
+                        <a href="#" class="hover:text-gray-400">Upload</a>
                     </div>
-                    <div class="dropdown">
-                        <svg class="dropbtn"xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 24 24"><path d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"></path></svg>            
-                        <div class="dropdown-content">
-                            <a href="#">Login</ahref>
-                            <a href="#">Join</a>
-                            <div class="country">
-                            <a href="#">Change Language</a>
-                                <div><img  src="usa.png" alt="usa" width="36px" height="26px"></div>
+                    <div class="group ml-5 relative">
+                        <svg class="fill-white"xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 24 24"><path d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"></path></svg>            
+                        <div class="hidden right-0 absolute w-80 group-hover:block border rounded-lg bg-gray-100 text-left shadow-gray-100/50 text-base text-black">
+                            <a class="p-2 block hover:bg-gray-300" href="#">Login</a>
+                            <a class="p-2 block hover:bg-gray-300" href="#">Join</a>
+                            <div class="flex">
+                            <a class="p-2 block hover:bg-gray-300" href="#">Change Language</a>
+                                <div><img  src="Pexels/usa.png" alt="usa" width="36px" height="26px"></div>
                             </div>
-                            <a href="#">Image & Video APi</a>
-                            <a href="#">Apps & Plugins</a>
-                            <a href="#">FAQ</a>
-                            <a href="#">Partnerships</a>
-                            <a href="#">Imprint & Terms</a>
-                            <div class="social-media">
-                                <a href="#"><i class="fa fa-facebook-f"></i></a>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-instagram"></i></a>
-                                <a href="#"><i class="fa fa-whatsapp"></i></a>
-                                <a href="#"><i class="fa fa-youtube-play"></i></a>
+                            <a class="p-2 block hover:bg-gray-300" href="#">Image & Video APi</a>
+                            <a class="p-2 block hover:bg-gray-300" href="#">Apps & Plugins</a>
+                            <a class="p-2 block hover:bg-gray-300" href="#">FAQ</a>
+                            <a class="p-2 block hover:bg-gray-300" href="#">Partnerships</a>
+                            <a class="p-2 block hover:bg-gray-300" href="#">Imprint & Terms</a>
+                            <div class="flex justify-between text-center align-middle">
+                                <a class="w-1/2 h-10 hover:bg-gray-500 hover:text-white" href="#"><i class="fa fa-facebook-f"></i></a>
+                                <a class="w-1/2 h-10 hover:bg-gray-500 hover:text-white" href="#"><i class="fa fa-twitter"></i></a>
+                                <a class="w-1/2 h-10 hover:bg-gray-500 hover:text-white" href="#"><i class="fa fa-instagram"></i></a>
+                                <a class="w-1/2 h-10 hover:bg-gray-500 hover:text-white" href="#"><i class="fa fa-whatsapp"></i></a>
+                                <a class="w-1/2 h-10 hover:bg-gray-500 hover:text-white" ="#"><i class="fa fa-youtube-play"></i></a>
                             </div>
                         </div>
                     </div>
-                    <button class="button-join">Join</button>
+                    <button class="ml-auto rounded bg-jgreen w-24 text-white hover:bg-jgreen/20 hover:border-solid hover:border-2">Join</button>
                 </div>
-                <div class="screen">
+                <div class="hidden">
                     <header>
                         <a class="target-burger">
                             <ul class="buns">
@@ -78,7 +70,7 @@
                         <hr>
                         <ul>
                             <li><a href="#">Login</a></li>
-                            <li><a href="#">Change Language <img  src="usa.png" alt="usa" width="36px" height="26px"></a></li>
+                            <li><a href="#">Change Language <img  src="Pexels/usa.png" alt="usa" width="36px" height="26px"></a></li>
                             <li><a href="#">Free Videos</a></li>
                             <li><a href="#">Challenges</a></li>
                         </ul>
@@ -99,27 +91,25 @@
                         </div>
                     </nav>
                 </div>
-            </nav>    
-            <div class="hero-img">        
-                <div class="hero-background">
-                    <img src="hero.jpeg" alt="sea">
-                </div>
-                <section class="hero-content">
-                    <h1 class="hero-title">The best free stock photos, 
-                    royalty free images & videos shared by creators.</h1>
-                    <div class="search-bar-container">
-                        <input autocapitalize="none" autocomplete="off" id="search-hero" name="s" placeholder="Search for free photos" required="required" type="search" value="">
-                        <i class="fa fa-search hero-search"></i>
-                    </div>        
-                    <p>Suggested <span style="color: rgb(247, 247, 247);">fantasy, corporate, security, fashion model, hiking, industry, more</span></p>
-                </section>
-                <section class="hero-footer">
-                    <h3 style="color: rgba(255, 255, 255, 0.712);">Photo By Tella</h3>
-                </section>
-            </div>
-        </header>
+    </header>
+    <div class="relative">        
+        <div class="">
+            <img src="Pexels/hero.jpeg" alt="sea">
+        </div>
+        <section class="absolute top-44 left-1/4 w-5/12">
+            <h1 class="text-4xl text-white font-bold mb-4">The best free stock photos, 
+            royalty free images & videos shared by creators.</h1>
+            <div class="relative">
+                <input autocapitalize="none" autocomplete="off" class="w-full h-14 rounded-2xl pl-4 bg-gray-50/80" name="s" placeholder="Search for free photos" required="required" type="search" value="">
+                <i class="fa fa-search absolute right-4 top-3 text-2xl"></i>
+            </div>        
+            <p class="text-white text-base">Suggested <span style="color: rgb(247, 247, 247);">fantasy, corporate, security, fashion model, hiking, industry, more</span></p>
+        </section>
+        <section class="absolute right-14 top-97 font-bold italic text-lg">
+            <h3 style="color: rgba(255, 255, 255, 0.712);">Photo By Tella</h3>
+        </section>
     </div>
-    <div class="screen">
+    <div class="hidden">
         <header>
             <a class="target-burger">
                 <ul class="buns">
@@ -156,93 +146,54 @@
                 <li><a href="#">Imprint & Terms</a></li>
             </ul>
             <hr>
-<!--            <div class="smt">
-                <ul>
-                    <li><a href="#"><i class="fa fa-facebook-f"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fa fa-whatsapp"></i></a></li>
-                    <li><a href="#"><i class="fa fa-youtube-play"></i></a></li>
-                </ul>
-            </div>-->
         </nav>
     </div>
-    <main>
-        <div class="head-links">
-            <a href="#" class="active">Home</a>
-            <a href="#">Discover</a>
-            <a href="#">Videos</a>
-            <a href="#">Leaderboard</a>
-            <a href="#">Challenges</a>
+    <main class="mt-0 relative">
+        <div class="font-semibold text-lg text-center space-x-12 py-4 border-b-2">
+            <a href="#" class="text-blue-700 border-b-4 border-blue-700 rounded-sm pb-4">Home</a>
+            <a href="#" class="hover:text-blue-700">Discover</a>
+            <a href="#" class="hover:text-blue-700">Videos</a>
+            <a href="#" class="hover:text-blue-700">Leaderboard</a>
+            <a href="#" class="hover:text-blue-700">Challenges</a>
         </div>
-        <div class="photo-top">
-            <div id="free-stock">Free Stock Photos</div>
-            <div id="trending">
+        <div class=" mt-5 mb-4 flex font-bold text-xl mx-24">
+            <div class="">Free Stock Photos</div>
+            <div class="ml-auto pr-8">
                 <span>Trending</span>
                 <i class="fa fa-caret-down"></i>
             </div>
         </div>
-        <div class="photo-gallery">
-            <div class="column">
-                <img src="1.jfif" alt="1">
-                <img src="2.jpg" alt="2">
-                <img src="3.jpg" alt="3">
-                <img src="4.jfif" alt="4">
-                <img src="6.jpg" alt="6">
-                <img src="19.jpg" alt="19">
-                <img src="14.jpg" alt="14">
-            </div>
-            <div class="column">
-                <img src="7.jfif" alt="7">
-                <img src="8.jfif" alt="8">
-                <img src="10.jpg" alt="10">
-                <img src="11.jfif" alt="11">
-                <img src="12.jpg" alt="12">
-                <img src="22.jpg" alt="22">
-                <img src="5.jfif" alt="5">
+        <div class="flex mx-16 gap-4">
+            <div class="w-1/3 space-y-4">
+                <img src="Pexels/1.jfif" alt="1">
+                <img src="Pexels/2.jpg" alt="2">
+                <img src="Pexels/3.jpg" alt="3">
+                <img src="Pexels/4.jfif" alt="4">
+                <img src="Pexels/6.jpg" alt="6">
+                <img src="Pexels/19.jpg" alt="19">
+                <img src="Pexels/14.jpg" alt="14">
+            </div> 
+            <div class="w-1/3 space-y-4">
+                <img src="Pexels/7.jfif" alt="7">
+                <img class="w-full" src="Pexels/8.jfif" alt="8">
+                <img src="Pexels/10.jpg" alt="10">
+                <img src="Pexels/11.jfif" alt="11">
+                <img src="Pexels/12.jpg" alt="12">
+                <img src="Pexels/22.jpg" alt="22">
+                <img class="w-full" src="Pexels/5.jfif" alt="5">
                 
             </div>
-            <div class="column">
-                <img src="13.jpg" alt="13">
-                <img src="15.jpg" alt="15">
-                <img src="16.jpg" alt="16">
-                <img src="17.jpg" alt="17">
-                <img src="18.jfif" alt="18">
-                <img src="21.jpg" alt="21">
-                <img src="20.png" alt="20">
-                <img src="23.jpg" alt="23">
-                <img src="9.jpg" alt="9">
-                <img src="24.jpg" alt="24">
-            </div>
-        </div>
-        <div class="photo-gallery2">
-            <div class="column2">
-                <img src="1.jfif" alt="1">
-                <img src="2.jpg" alt="2">
-                <img src="3.jpg" alt="3">
-                <img src="4.jfif" alt="4">
-                <img src="6.jpg" alt="6">
-                <img src="19.jpg" alt="19">
-                <img src="14.jpg" alt="14">
-                <img src="13.jpg" alt="13">
-                <img src="15.jpg" alt="15">
-                <img src="16.jpg" alt="16">
-                <img src="17.jpg" alt="17">
-            </div>
-            <div class="column2">
-                <img src="7.jfif" alt="7">
-                <img src="8.jfif" alt="8">
-                <img src="10.jpg" alt="10">
-                <img src="11.jfif" alt="11">
-                <img src="12.jpg" alt="12">
-                <img src="22.jpg" alt="22">
-                <img src="5.jfif" alt="5">
-                <img src="18.jfif" alt="18">
-                <img src="21.jpg" alt="21">
-                <img src="20.png" alt="20">
-                <img src="23.jpg" alt="23">
-                <img src="9.jpg" alt="9">
-                <img src="24.jpg" alt="24">
+            <div class="w-1/3 space-y-4">
+                <img src="Pexels/13.jpg" alt="13">
+                <img src="Pexels/15.jpg" alt="15">
+                <img src="Pexels/16.jpg" alt="16">
+                <img src="Pexels/17.jpg" alt="17">
+                <img src="Pexels/18.jfif" alt="18">
+                <img src="Pexels/21.jpg" alt="21">
+                <img src="Pexels/20.png" alt="20">
+                <img src="Pexels/23.jpg" alt="23">
+                <img src="Pexels/9.jpg" alt="9">
+                <img src="Pexels/24.jpg" alt="24">
             </div>
         </div>
     </main>
