--- a/index2.html
+++ b/index2.html
@@ -7,24 +7,34 @@
     <link rel="shortcut icon" href="Pexels/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/output.css">
+    <script>
+        function myFunction(x) {
+            x.classList.toggle("change");
+        }   
+        document.addEventListener('DOMContentLoaded', (event) => {
+            document.querySelector('.target-burger').addEventListener('click', () => {
+                document.querySelector('body').classList.toggle('toggled');
+            })
+        })
+    </script>
 </head>
 <body class="font-nunito w-screen">
     <header class="flex flex-auto basis-full fixed p-4 top-1 z-30 w-screen">
                 <a href="index.html" class="w-2/3 flex space-x-3 align-middle" title="Free Stock Photos">
                     <div><img src="Pexels/logo.png" width="35px" height="35px"></div>
-                    <div class="text-lg font-bold text-white">Tella</div>
+                    <div class="sm:hidden lg:block lg:text-lg lg:font-bold lg:text-white">Tella</div>
                 </a>
-                <div class="w-1/3 flex pr-3">
-                    <div class="flex text-white space-x-7 text-xl">
-                        <a href="#" class="hover:text-gray-400">Explore</a>
-                        <a href="#" class="hover:text-gray-400">Licence</a>
-                        <a href="#" class="hover:text-gray-400">Upload</a>
+                <div class="sm:hidden xl:w-5/12 xl:flex xl:pr-3">
+                    <div class="xl:flex xl:text-white xl:space-x-7 xl:text-xl">
+                        <a href="#" class="xl:hover:text-gray-400">Explore</a>
+                        <a href="#" class="xl:hover:text-gray-400">Licence</a>
+                        <a href="#" class="xl:hover:text-gray-400">Upload</a>
                     </div>
-                    <div class="group ml-5 relative">
-                        <svg class="fill-white"xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 24 24"><path d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"></path></svg>            
-                        <div class="hidden right-0 absolute w-80 group-hover:block border rounded-lg bg-gray-100 text-left shadow-gray-100/50 text-base text-black">
-                            <a class="p-2 block hover:bg-gray-300" href="#">Login</a>
-                            <a class="p-2 block hover:bg-gray-300" href="#">Join</a>
+                    <div class="group xl:ml-5 xl:relative">
+                        <svg class="xl:fill-white"xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 24 24"><path d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"></path></svg>            
+                        <div class="hidden xl:right-0 xl:absolute xl:w-80 group-hover:block xl:border xl:rounded-lg xl:bg-gray-100 xl:text-left xl:shadow-gray-100/50 xl:text-base xl:text-black">
+                            <a class="xl:p-2 block hover:bg-gray-300" href="#">Login</a>
+                            <a class="xl:p-2 block hover:bg-gray-300" href="#">Join</a>
                             <div class="flex">
                             <a class="p-2 block hover:bg-gray-300" href="#">Change Language</a>
                                 <div><img  src="Pexels/usa.png" alt="usa" width="36px" height="26px"></div>
@@ -43,127 +53,87 @@
                             </div>
                         </div>
                     </div>
-                    <button class="ml-auto rounded bg-jgreen w-24 text-white hover:bg-jgreen/20 hover:border-solid hover:border-2">Join</button>
+                    <button class="xl:ml-auto xl:rounded xl:bg-jgreen xl:w-24 text-white hover:bg-jgreen/20 hover:border-solid hover:border-2">Join</button>
                 </div>
-                <div class="hidden">
-                    <header>
-                        <a class="target-burger">
-                            <ul class="buns">
-                                <li class="bun"></li>
-                                <li class="bun"></li>
-                            </ul>
-                        </a>
+                <div class="sm:block xl:hidden">
+                    <header class="relative">
+                        <div class="target-burger absolute sm:-right-20 md:-right-36 lg:-right-52" onclick="myFunction(this)">
+                            <div class="ease-in-out duration-300 w-9 h-1 bg-white my-102 bar1"></div>
+                            <div class="ease-in-out duration-300 w-9 h-1 bg-white my-102 bar2"></div>
+                            <div class="ease-in duration-300 w-9 h-1 bg-white my-102 bar3"></div>
+                        </div>
                     </header>
-                    <nav class="main-nav" role="navigation">
+                    <nav class="bg-navb w-screen fixed left-0 top-20 hidden navbar p-3 ease-in-out duration-300">
                         <ul>
-                            <li><a href="index.html">Home</a></li>
+                            <li><a class="text-2xl text-white hover:border-l-4 hover:border-l-white hover:rounded hover:ml-2" href="index.html">Home</a></li>
+                        </ul>
+                        <hr class="bg-white">
+                        <ul>
+                            <li><a class="text-2xl text-white hover:border-l-4 hover:border-l-white hover:rounded hover:ml-2" href="#">Discover Photos</a></li>
+                            <li><a class="text-2xl text-white hover:border-l-4 hover:border-l-white hover:rounded hover:ml-2" href="#">Popular Searches</a></li>
+                            <li><a class="text-2xl text-white hover:border-l-4 hover:border-l-white hover:rounded hover:ml-2" href="#">Free Videos</a></li>
+                            <li><a class="text-2xl text-white hover:border-l-4 hover:border-l-white hover:rounded hover:ml-2" href="#">Challenges</a></li>
+                            <li><a class="text-2xl text-white hover:border-l-4 hover:border-l-white hover:rounded hover:ml-2" href="#">Leaderboard</a></li>
+                            <li><a class="text-2xl text-white hover:border-l-4 hover:border-l-white hover:rounded hover:ml-2" href="#">Tellas Blog</a></li>
                         </ul>
                         <hr>
                         <ul>
-                            <li><a href="#">Discover Photos</a></li>
-                            <li><a href="#">Popular Searches</a></li>
-                            <li><a href="#">Free Videos</a></li>
-                            <li><a href="#">Challenges</a></li>
-                            <li><a href="#">Leaderboard</a></li>
-                            <li><a href="#">Tellas Blog</a></li>
+                            <li><a class="text-2xl text-white hover:border-l-4 hover:border-l-white hover:rounded hover:ml-2" href="#">Login</a></li>
+                            <li><a class="text-2xl text-white hover:border-l-4 hover:border-l-white hover:rounded hover:ml-2" href="#">Change Language <img  src="Pexels/usa.png" alt="usa" width="36px" height="26px"></a></li>
+                            <li><a class="text-2xl text-white hover:border-l-4 hover:border-l-white hover:rounded hover:ml-2" href="#">Free Videos</a></li>
+                            <li><a class="text-2xl text-white hover:border-l-4 hover:border-l-white hover:rounded hover:ml-2" href="#">Challenges</a></li>
                         </ul>
                         <hr>
                         <ul>
-                            <li><a href="#">Login</a></li>
-                            <li><a href="#">Change Language <img  src="Pexels/usa.png" alt="usa" width="36px" height="26px"></a></li>
-                            <li><a href="#">Free Videos</a></li>
-                            <li><a href="#">Challenges</a></li>
-                        </ul>
-                        <hr>
-                        <ul>
-                            <li><a href="#">Apps And Ps Plugin</a></li>
-                            <li><a href="#">FAQ</li>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Imprint & Terms</a></li>
+                            <li><a class="text-2xl text-white hover:border-l-4 hover:border-l-white hover:rounded hover:ml-2" href="#">Apps And Ps Plugin</a></li>
+                            <li><a class="text-2xl text-white hover:border-l-4 hover:border-l-white hover:rounded hover:ml-2" href="#">FAQ</li>
+                            <li><a class="text-2xl text-white hover:border-l-4 hover:border-l-white hover:rounded hover:ml-2" href="#">About Us</a></li>
+                            <li><a class="text-2xl text-white hover:border-l-4 hover:border-l-white hover:rounded hover:ml-2" href="#">Imprint & Terms</a></li>
                         </ul>
                         <hr>
                         <div class="social-media">
-                            <a href="#"><i class="fa fa-facebook-f"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                            <a href="#"><i class="fa fa-whatsapp"></i></a>
-                            <a href="#"><i class="fa fa-youtube-play"></i></a>
+                            <a class="text-2xl text-white hover:border-l-4 hover:border-l-white hover:rounded hover:ml-2" href="#"><i class="fa fa-facebook-f"></i></a>
+                            <a class="text-2xl text-white hover:border-l-4 hover:border-l-white hover:rounded hover:ml-2" href="#"><i class="fa fa-twitter"></i></a>
+                            <a class="text-2xl text-white hover:border-l-4 hover:border-l-white hover:rounded hover:ml-2" href="#"><i class="fa fa-instagram"></i></a>
+                            <a class="text-2xl text-white hover:border-l-4 hover:border-l-white hover:rounded hover:ml-2" href="#"><i class="fa fa-whatsapp"></i></a>
+                            <a class="text-2xl text-white hover:border-l-4 hover:border-l-white hover:rounded hover:ml-2" href="#"><i class="fa fa-youtube-play"></i></a>
                         </div>
                     </nav>
                 </div>
     </header>
     <div class="relative">        
-        <div class="">
-            <img src="Pexels/hero.jpeg" alt="sea">
+        <div class="sm:h-97 sm:w-screen sm:object-cover xl:w-full">
+            <img  class="sm:h-97 xl:w-full" src="Pexels/hero.jpeg" alt="sea">
         </div>
-        <section class="absolute top-44 left-1/4 w-5/12">
-            <h1 class="text-4xl text-white font-bold mb-4">The best free stock photos, 
+        <section class="absolute xl:top-44 xl:left-1/4 xl:w-5/12 sm:top-24 sm:left-0 sm:w-11/12 sm:ml-3">
+            <h1 class="text-4xl text-white font-bold mb-4 sm:text-3xl">The best free stock photos, 
             royalty free images & videos shared by creators.</h1>
             <div class="relative">
-                <input autocapitalize="none" autocomplete="off" class="w-full h-14 rounded-2xl pl-4 bg-gray-50/80" name="s" placeholder="Search for free photos" required="required" type="search" value="">
+                <input autocapitalize="none" autocomplete="off" class="w-full h-14 rounded-2xl pl-4 bg-gray-50/80 sm:" name="s" placeholder="Search for free photos" required="required" type="search" value="">
                 <i class="fa fa-search absolute right-4 top-3 text-2xl"></i>
             </div>        
-            <p class="text-white text-base">Suggested <span style="color: rgb(247, 247, 247);">fantasy, corporate, security, fashion model, hiking, industry, more</span></p>
+            <p class="text-white text-base sm:text-base">Suggested <span style="color: rgb(247, 247, 247);">fantasy, corporate, security, fashion model, hiking, industry, more</span></p>
         </section>
-        <section class="absolute right-14 top-97 font-bold italic text-lg">
+        <section class="xl:absolute xl:right-14 xl:top-97 xl:font-bold xl:italic xl:text-lg">
             <h3 style="color: rgba(255, 255, 255, 0.712);">Photo By Tella</h3>
         </section>
     </div>
-    <div class="hidden">
-        <header>
-            <a class="target-burger">
-                <ul class="buns">
-                    <li class="bun"></li>
-                    <li class="bun"></li>
-                </ul>
-            </a>
-        </header>
-        <nav class="main-nav">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-            </ul>
-            <hr>
-            <ul>
-                <li><a href="#">Discover Photos</a></li>
-                <li><a href="#">Popular Searches</a></li>
-                <li><a href="#">Free Videos</a></li>
-                <li><a href="#">Challenges</a></li>
-                <li><a href="#">Leaderboard</a></li>
-                <li><a href="#">Tellas Blog</a></li>
-            </ul>
-            <hr>
-            <ul>
-                <li><a href="#">Login</a></li>
-                <li><a href="#">Change Language <img  src="usa.png" alt="usa" width="36px" height="26px"></a></li>
-                <li><a href="#">Free Videos</a></li>
-                <li><a href="#">Challenges</a></li>
-            </ul>
-            <hr>
-            <ul>
-                <li><a href="#">Apps And Ps Plugin</a></li>
-                <li><a href="#">FAQ</li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Imprint & Terms</a></li>
-            </ul>
-            <hr>
-        </nav>
-    </div>
     <main class="mt-0 relative">
-        <div class="font-semibold text-lg text-center space-x-12 py-4 border-b-2">
-            <a href="#" class="text-blue-700 border-b-4 border-blue-700 rounded-sm pb-4">Home</a>
+        <div class="font-semibold text-lg text-center space-x-12 py-4 border-b-2 sm:block sm:overflow-y-hidden sm:overflow-x-auto sm:whitespace-nowrap">
+            <a href="#" class="text-blue-700 border-b-4 border-blue-700 rounded-sm pb-4 sm:ml-3">Home</a>
             <a href="#" class="hover:text-blue-700">Discover</a>
             <a href="#" class="hover:text-blue-700">Videos</a>
             <a href="#" class="hover:text-blue-700">Leaderboard</a>
             <a href="#" class="hover:text-blue-700">Challenges</a>
         </div>
-        <div class=" mt-5 mb-4 flex font-bold text-xl mx-24">
+        <div class="mt-5 mb-4 flex font-bold xl:text-xl xl:mx-24 sm:text-base sm:mx-4">
             <div class="">Free Stock Photos</div>
             <div class="ml-auto pr-8">
                 <span>Trending</span>
                 <i class="fa fa-caret-down"></i>
             </div>
         </div>
-        <div class="flex mx-16 gap-4">
+        <div class="xl:flex mx-16 gap-4 sm:hidden">
             <div class="w-1/3 space-y-4">
                 <img src="Pexels/1.jfif" alt="1">
                 <img src="Pexels/2.jpg" alt="2">
@@ -181,7 +151,6 @@
                 <img src="Pexels/12.jpg" alt="12">
                 <img src="Pexels/22.jpg" alt="22">
                 <img class="w-full" src="Pexels/5.jfif" alt="5">
-                
             </div>
             <div class="w-1/3 space-y-4">
                 <img src="Pexels/13.jpg" alt="13">
@@ -196,6 +165,37 @@
                 <img src="Pexels/24.jpg" alt="24">
             </div>
         </div>
+        <div class="sm:visible sm:mx-4 flex sm:flex-col sm:basis-full xl:hidden md:flex-row md:space-x-4">
+            <div class="sm:space-y-4 md:w-2/4 md:h-30">
+                <img class="w-full " src="Pexels/1.jfif" alt="1">
+                <img class="w-full" src="Pexels/2.jpg" alt="2">
+                <img class="w-full " src="Pexels/3.jpg" alt="3">
+                <img class="w-full " src="Pexels/4.jfif" alt="4">
+                <img class="w-full " src="Pexels/6.jpg" alt="6">
+                <img class="w-full " src="Pexels/19.jpg" alt="19">
+                <img class="w-full " src="Pexels/14.jpg" alt="14">
+                <img class="w-full " src="Pexels/13.jpg" alt="13">
+                <img class="w-full " src="Pexels/15.jpg" alt="15">
+                <img class="w-full " src="Pexels/16.jpg" alt="16">
+                <img class="w-full " src="Pexels/17.jpg" alt="17">
+            </div>
+            <div class="sm:space-y-4 md:w-2/4">
+                <img class="w-full " src="Pexels/7.jfif" alt="7">
+                <img class="w-full " src="Pexels/8.jfif" alt="8">
+                <img class="w-full " src="Pexels/10.jpg" alt="10">
+                <img class="w-full " src="Pexels/11.jfif" alt="11">
+                <img class="w-full " src="Pexels/12.jpg" alt="12">
+                <img class="w-full " src="Pexels/22.jpg" alt="22">
+                <img class="w-full " src="Pexels/5.jfif" alt="5">
+                <img class="w-full " src="Pexels/18.jfif" alt="18">
+                <img class="w-full " src="Pexels/21.jpg" alt="21">
+                <img class="w-full " src="Pexels/20.png" alt="20">
+                <img class="w-full " src="Pexels/23.jpg" alt="23">
+                <img class="w-full " src="Pexels/9.jpg" alt="9">
+                <img class="w-full " src="Pexels/24.jpg" alt="24">
+            </div>
+        </div>
+
     </main>
 </body>
 </html>
